remove scroll up button due to problems

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -71,13 +71,13 @@
       </nav>
     </header>
     <main role="main" class="container">
-      <button
+      <!-- <button
         type="button"
         class="btn shadow btn-light btn-lg"
         id="btn-back-to-top"
       >
         <i class="fa fa-solid fa-arrow-up"></i>
-      </button>
+      </button> -->
       <div class="row-md-8 d-flex justify-content-between mb-3">
         <div class="dropdown open">
           <button
