--- a/templates/layout.html
+++ b/templates/layout.html
@@ -123,7 +123,7 @@
             aria-haspopup="true"
             aria-expanded="false"
           >
-            Country Filter
+            Region Filter
           </button>
           <div class="dropdown-menu" aria-labelledby="triggerId">
             {% for country in countries %}
